src/modules/app/components/side-nav/side-nav.styles.less
@import (reference) '~assets/styles/shared';

.SideNav {
  background: @color-purple;
  display: flex;
  flex-flow: column nowrap;
}

.SideNav__nav {
  border: 1px solid @color-grayish-purple;
  border-left: none;
  border-right: none;
  list-style: none;
  margin: 0;
  padding: 0;

  > li {
    border-bottom: 1px solid @color-grayish-purple;

    &:last-child { border: none; }
  }

  .disabled {
    pointer-events: none;

    > li,
    > a,
    > button {
      span {
        color: @color-gray;
      }

      svg {
        g {
          stroke: @color-gray;
        }
      }
    }
  }

  > li a,
  > li button {
    background: none;
    display: block;
    font-size: 0.625rem;
    height: 4rem;
    margin: 0;
    padding: 0;
    position: relative;
    text-align: center;
    width: 100%;

    &.selected {
      background: @color-lightpurple;
    }

    &:hover {
      background: @color-lightpurple;
      cursor: pointer;
    }

    &:last-child { border: none; }

    span {
      bottom: 0.8rem;
      color: @color-white;
      font-weight: 500;
      left: 0;
      letter-spacing: 0.01875rem;
      position: absolute;
      right: 0;
      text-align: center;
      text-transform: uppercase;
    }

    svg {
      height: 1.5rem;
      transform: translateY(0.5rem);
      width: 1.5rem;
    }

    svg.nav-create-icon {
      margin-top: 0.125rem;
      transform: translateY(0.5rem) scale(0.85);
    }

    svg.nav-portfolio-icon {
      transform: translateY(0.5rem) scale(0.95);
    }
  }
}

@media @breakpoint-mobile {
  .SideNav {
    display: flex;
    flex-flow: column nowrap;
    height: 100vh;
    left: -12.5rem;
    overflow: auto;
    padding-top: 2.8125rem;
    position: absolute;
    transition: left 0.2s ease-in-out;
    width: 12.5rem;

    &.mobileShow {
      left: 0;
    }
  }

  .SideNav__nav__separator {
    background: @color-grayish-purple;
    height: 1px;
    margin: 1rem 0 0.5rem;
    width: 12.125rem;
  }

  .SideNav__stat-label {
    color: fadeout(@color-white, 75);
    padding-bottom: 0.5rem;
  }

  .SideNav__stat-value {
    color: @color-white;
    max-width: 120px;
    overflow: hidden;
    padding-left: 0.5rem;
    text-overflow: ellipsis;
    vertical-align: top;
  }

  .SideName__placement {
    padding: 20% 0 20% 20%;
  }

  .SideNav__amt {
    align-self: flex-end;
    font-size: 0.925rem;
    margin-top: auto;
    width: 100%;

    span {
      display: inline-block;
      font-weight: 500;
      position: static;
      text-align: left;
    }
  }

  .SideNav__nav {
    border: none;
    padding-left: 1rem;
    padding-top: 10px;

    > li {
      border: none;
      padding: 0;

      a,
      button {
        font-size: 0.75rem;
        height: 3.75rem;
        text-align: left;

        &:hover { background: none; }

        span {
          display: inline-block;
          font-weight: 400;
          line-height: 3.75rem;
          padding-left: 1rem;
          position: static;
          text-align: left;
        }
      }
    }
  }
}

